[project]
name = "masonml"
version = "0.1.0"
description = "A smart environment manager for machine learning projects."
authors = [{ name = "Henry Paschke", email = "h3nry.pas@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "typer[all] >= 0.9",
    "rich",              # for pretty CLI output (optional but nice)
    "py-cpuinfo",        # for CPU/gpu detection
    "requests",          # for optional online queries (e.g. version compat)
    "pyyaml",            # for working with environment.yml files
]

[project.scripts]
mason = "masonml.cli:app"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
